# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = src

man_MANS = doc/fexd.8 doc/fex.conf.5

EXTRA_DIST = doc/fexd.8 doc/fex.conf.5 doc/classes.dot \
	debian/changelog debian/control debian/docs debian/fex.init \
	debian/fex.postrm.debhelper debian/fex.substvars debian/postinst \
	debian/compat debian/copyright debian/fex.default debian/fex.postinst.debhelper \
	debian/fex.prerm.debhelper debian/files debian/rules